# fyp-24079

./: README.md  asdf.py  main.py  pyproject.toml
src/: config.py
src/core/embedding/: embedding_model.py
src/core/llm/: openai_llm.py  utils.py
src/core/llm/prompts/: generate_example_prompt.txt
